--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jade": "^0.14.1",
+    "grunt-contrib-watch": "^0.6.1",
     "load-grunt-tasks": "^3.1.0"
   }
 }
