--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "repository": "git",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "~0.12.2",
+    "grunt-contrib-uglify": "~0.8.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.8.0",
